Update World war II.html

--- a/World war II.html
+++ b/World war II.html
@@ -59,7 +59,7 @@
 <p>____________________________________________________________________________________________________________________________________________________________________________________________</p>
 <h3>Adolf Hitler (1889-1945)</h3>
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/e/e1/Hitler_portrait_crop.jpg"width="80">
+<img src="https://upload.wikimedia.org/wikipedia/commons/e/e1/Hitler_portrait_crop.jpg">
 
 
 
